clusters/building-blocks/monitoring/apps/beszel/app/beszel-agent-daemonset.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/daemonset-apps-v1.json
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: beszel-agent
  namespace: monitoring
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: beszel-agent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: beszel-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beszel-agent
    spec:
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
      containers:
        - name: beszel-agent
          image: henrygd/beszel-agent:0.21.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: proc
              mountPath: /proc
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: media
              mountPath: /extra-filesystems/sdb__media
              readOnly: true
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - SYS_PTRACE
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
        - name: media
          hostPath:
            path: /mnt/data/
            type: DirectoryOrCreate
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 100%
