clusters/building-blocks/monitoring/apps/beszel/app/beszel-hub-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: beszel-hub
  namespace: monitoring
  labels:
    app.kubernetes.io/name: beszel-hub
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: beszel-hub
