clusters/building-blocks/monitoring/apps/beszel/app/beszel-hub-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beszel-hub
  namespace: monitoring
  labels:
    app.kubernetes.io/name: beszel-hub
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`infra.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: local-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: beszel-hub
          namespace: monitoring
          passHostHeader: true
          port: 8090
          scheme: http
